[package]
name = "block-on"
version = "0.1.0"
authors = ["You <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waker-fn = "1.1"
futures-lite = "1.11"
crossbeam = "0.8"

[dev-dependencies]
async-std = "1.7"
